styles/globals.scss
@use "mixins";
@use "reset";
@use "rfs";
@use "variables";

:root {
  --trueblack: #000000;
  --black: #333333;
  --white: #eaeae7;

  --rosetaupe: #905151;
  --wenge: #c49797;

  --bone: #d1d1bc;
  --ivory: #f6f5e8;
  --timberwolf-pinker: #d5cbc6;
  --timberwolf-beiger: #d4ccc4;
}

@font-face {
  font-family: "Ogg";
  src:
    url("/fonts/OggRegular.woff2") format("woff2"),
    url("/fonts/OggRegular.woff") format("woff");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Ogg";
  src:
    url("/fonts/OggMedium.woff2") format("woff2"),
    url("/fonts/OggMedium.woff") format("woff");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Ogg";
  src:
    url("/fonts/OggBold.woff2") format("woff2"),
    url("/fonts/OggBold.woff") format("woff");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

*:focus-visible {
  outline-style: dashed;
  outline-color: var(--rosetaupe);
  outline-width: 2px;
  outline-offset: 0.5rem;
}

::selection {
  color: var(--wenge);
  background-color: var(--black);
}

html {
  scrollbar-gutter: stable;
}

body {
  font-family: "Inter", sans-serif;
  @include rfs.font-size(16px);
  font-weight: 400;
  line-height: 1.75;
  background-color: var(--black);
  color: var(--white);
  padding: 0 3rem;
  overflow-x: hidden;
  transition: 0.8s background-color;

  &.scroll-lock {
    overflow: hidden;
  }
}

%heading {
  margin-top: 0;
  margin-bottom: 0;
  font-style: normal;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: 0.03em;
}

h1,
.h1 {
  @extend %heading;
  @include rfs.font-size(60px);
  font-family: "Ogg", sans-serif;
}

h2,
.h2 {
  @extend %heading;
  @include rfs.font-size(25px);
  font-family: "Ogg", sans-serif;
  font-weight: 400;
}

h3,
.h3 {
  @extend %heading;
  @include rfs.font-size(16px);
  font-family: "Inter", sans-serif;
  font-weight: 600;
  text-transform: uppercase;
}

h4,
.h4 {
  @extend %heading;
  @include rfs.font-size(16px);
  font-family: "Inter", sans-serif;
  font-weight: 600;
}

h1,
h2,
h3 {
  margin-bottom: 1.5rem;
}

h4,
h5,
h6 {
  margin-bottom: 1rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  &:last-child {
    margin-bottom: 0rem;
  }
}

p,
.paragraph {
  margin-top: 0;
  margin-bottom: 1.5rem;
  @include rfs.font-size(16px);

  &:last-child {
    margin-bottom: 0;
  }
}

.extralight,
.fw-extralight {
  font-weight: 200;
}

.light,
.fw-light {
  font-weight: 300;
}

.medium,
.fw-medium {
  font-weight: 500;
}

.semibold,
.fw-semibold {
  font-weight: 600;
}

b,
strong,
.bold,
.fw-bold {
  font-weight: 700;
}

.caption {
  @include rfs.font-size(14px);
}

.caption-all * {
  @include rfs.font-size(14px);
}

small,
.small {
  @include rfs.font-size(12px);
}

.allcaps {
  text-transform: uppercase;
}

a,
.link {
  color: var(--rosetaupe);
  text-decoration: underline;
  border-radius: 0.25rem;
  transition: 0.3s color;

  &:hover,
  &:focus {
    color: var(--wenge);
    text-decoration: underline;
  }
}

ol,
ul {
  margin-bottom: 1.5rem;
  padding-left: 1.25rem;

  &:last-child {
    margin-bottom: 0.5rem;
  }
}

p,
.paragraph {
  & + {
    ol,
    ul {
      margin-top: -1rem;
    }
  }
}

li {
  margin-bottom: 0.5rem;

  & > ol,
  & > ul {
    margin-top: 0.5rem;
  }
}

.bg-trueblack {
  background-color: var(--trueblack);
}
.bg-black {
  background-color: var(--black) !important;
}
.bg-white {
  background-color: var(--white) !important;
}
.bg-rosetaupe {
  background-color: var(--rosetaupe);
}
.bg-wenge {
  background-color: var(--wenge);
}
.bg-bone {
  background-color: var(--bone);
}
.bg-ivory {
  background-color: var(--ivory);
}
.bg-timberwolf-pinker {
  background-color: var(--timberwolf-pinker);
}
.bg-timberwolf-beiger {
  background-color: var(--timberwolf-beiger);
}

.text-trueblack {
  color: var(--trueblack);
}
.text-black {
  color: var(--black) !important;
}
.text-white {
  color: var(--white) !important;
}
.text-rosetaupe {
  color: var(--rosetaupe);
}
.text-wenge {
  color: var(--wenge);
}
.text-bone {
  color: var(--bone);
}
.text-ivory {
  color: var(--ivory);
}
.text-timberwolf-pinker {
  color: var(--timberwolf-pinker);
}
.text-timberwolf-beiger {
  color: var(--timberwolf-beiger);
}

.spacer-sm {
  height: 1rem;
  @include mixins.media("md") {
    height: 1.5rem;
  }
  @include mixins.media("xl") {
    height: 2rem;
  }
}
.spacer-md {
  height: 3rem;
  @include mixins.media("md") {
    height: 3.5rem;
  }
  @include mixins.media("xl") {
    height: 4rem;
  }
}
.spacer-lg {
  height: 4rem;
  @include mixins.media("md") {
    height: 5rem;
  }
  @include mixins.media("xl") {
    height: 6rem;
  }
}
.spacer-xl {
  height: 6rem;
  @include mixins.media("md") {
    height: 7rem;
  }
  @include mixins.media("xl") {
    height: 8rem;
  }
}

.divider {
  display: block;
  width: 100%;
  max-width: 920px;
  height: 1px;
  margin: 0 auto;
  background: var(--timberwolf-beiger);
}

// Single container class with breakpoint max-widths
.container,
// 100% wide container at all breakpoints
.container-fluid {
  @include mixins.make-container();
}

// Responsive containers that are 100% wide until a breakpoint
@each $breakpoint, $container-max-width in variables.$container-max-widths {
  .container-#{$breakpoint} {
    @extend .container-fluid;
  }

  @include mixins.media-breakpoint-up(
    $breakpoint,
    variables.$grid-breakpoints
  ) {
    %responsive-container-#{$breakpoint} {
      max-width: $container-max-width;
    }

    // Extend each breakpoint which is smaller or equal to the current breakpoint
    $extend-breakpoint: true;

    @each $name, $width in variables.$grid-breakpoints {
      @if ($extend-breakpoint) {
        .container#{mixins.breakpoint-infix($name, variables.$grid-breakpoints)} {
          @extend %responsive-container-#{$breakpoint};
        }

        // Once the current breakpoint is reached, stop extending
        @if ($breakpoint == $name) {
          $extend-breakpoint: false;
        }
      }
    }
  }
}

// Row
//
// Rows contain your columns.

.row {
  @include mixins.make-row();

  > * {
    @include mixins.make-col-ready();
  }
}

.grid {
  display: grid;
  grid-template-rows: repeat(var(--rows, 1), 1fr);
  grid-template-columns: repeat(
    var(--columns, #{variables.$grid-columns}),
    1fr
  );
  gap: var(--gap, #{variables.$grid-gutter-width});

  @include mixins.make-cssgrid();
}

// Columns
//
// Common styles for small and large grid columns

@include mixins.make-grid-columns();

.contact-cta {
  color: var(--white);
  transition: 0.3s color;
}

.contact-cta-text {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.slick-list {
  transition: 0.3s height;
}

.ReactModal__Overlay {
  opacity: 0;
}

.ReactModal__Overlay--after-open {
  opacity: 1;
  transition: opacity 0.5s ease-out;
}

.ReactModal__Content {
  -webkit-transform: scale(0.9);
  transform: scale(0.9);
}

.ReactModal__Content--after-open {
  -webkit-transform: scale(1);
  transform: scale(1);
  transition: all 0.5s ease-out;
}

.ReactModal__Overlay--before-close {
  opacity: 0;
}

.ReactModal__Content--before-close {
  -webkit-transform: scale(0.9);
  transform: scale(0.9);
  transition: all 0.5s ease-out;
}

.image-modal-overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(51, 51, 51, 0.5);
  display: flex;
  align-items: center;
}

.image-modal-content {
  position: absolute;
  left: 0;
  right: 0;
  overflow: auto;
  outline: none;
  padding: 0;
  margin: 0 auto;
  max-height: 100vh;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  background: var(--white);
}

